Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.1
	 * Save:	8
	 * Network:	11

	Android		18
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.1

	in p2p online play, when someone disconnects, the others can carry on playing
	in italian cards, there is no limit to the number of cards you can hold
	FlashGUI does not show crapAI as a option as it is not needed for normal play
	FlashGUI nullpointer in closegame double click fix
	MapEditor will save a image added as a bmp as a png

	Android 18 nullpointer in getPlayerColors and android menu fixed
	Android 17 warn exception in MapUpdateService does not spam logs
		   nullpointer in getPlayerColors fixed
		   fixed: MapView combo error when no item selected by swiping bellow items while AI is playing
	Android 16 italian fix
		   grasshopper update
		   nullpointer in map chooser fixed
	Android 15 fixed: help screen crash on display string with & symbol
		   fixed: MapView combo error when no item selected by swiping bellow items
	Android 14 lobby integration started
		   2nd nullpointer in loadgame fixed
		   do not print stack on getDrawable(Context,String) failing
		   fixed: in ICS the menu button still comes up, (eg THC One X)
		   fixed: ldpi/small green go button looks wrong

1.1.1.0

	when you must trade, the "End Trade" button becomes disabled/hidden
	can have different circle sizes on maps
	the map Editor can save jpeg files as well as png for the img pic

	Android 13 xhdpi graphics update
		   fixed - some maps not loading (e.g Italia_s)
	Android 12 Grasshopper update
		   xhdpi update for 9.png for main meu button and appstore
		   null pointer in drawArnies fix
	Android 11 donate button added to main menu
		   circles on map can be different size for different maps
		   capitals look a bit better
	Android 10 stats graph added
	Android 9 some maps fail to load on Android